# ase2sprkkr

./: .gitignore  CHANGELOG  CMakeLists.txt  MANIFEST.in  Makefile  README.md  install.sh  install_dependencies.sh  list_dependencies.py  meson.build  meta.yaml  pyproject.toml  requirements.txt  run_tests  setup.cfg  setup.py
docs/: .buildinfo  (+16 more)
src/: a.py  meson.build  run_tests  setup.py  sources.py
src/ase.bak/plugins/sprkkr/: __init__.py
src/ase2sprkkr/: CMakeLists.txt  Fe_JXC.inp  Fe_JXC_XCPLTEN_Dij_x_Fe.agr  Fe_JXC_XCPLTEN_Jij_Fe.agr  Fe_TORQUE.inp  __init__.py  __main__.py  config.py  configuration.py  run_tests  version.py
src/ase2sprkkr/Fe_TORQUE.tau.dir/: P1E10  P1E18  P1E19  P1E21  P1E24  P1E30  P1E35  P1E6  info
src/ase2sprkkr/ase/: build.py  io.py  pbc.py  register.py  symbols.py  visualise.py
src/ase2sprkkr/ase/test/: test_build.py
src/ase2sprkkr/asr/: __init__.py
src/ase2sprkkr/bindings/: __init__.py  empty_spheres.py  es_finder.py  spglib.py
src/ase2sprkkr/bindings/empty_spheres/: input.doc
src/ase2sprkkr/bindings/nomad/: nomad.py  nomad_api.py
src/ase2sprkkr/bindings/tests/: init_tests.py  test_es_finder.py  test_spglib.py
src/ase2sprkkr/bindings/xband/: CMakeLists.txt  meson.build  spheres.h  spheres.pyx  symmetry.h  symmetry.pyx
src/ase2sprkkr/bindings/xband_empty_spheres/: meson.build  spheres.h  spheres.pyx  symmetry.h  symmetry.pyx
src/ase2sprkkr/common/: __init__.py  alternative_types.py  backward_compatibility.py  base_configuration.py  conf_common.py  conf_containers.py  configuration.py  configuration_containers.py  configuration_definitions.py  container_definitions.py  debug.py  decorators.py  directory.py  doc.py  formats.py  generated_configuration_definitions.py  grammar.py  grammar_types.py  init_tests.py  lazy_string.py  misc.py  no_output.py  options.py  parsing_results.py  process_output_reader.py  repeated_configuration_containers.py  section_adaptors.py  subprocess.py  tools.py  unique_values.py  value_definitions.py  warnings.py  yaml.py
src/ase2sprkkr/common/grammar_types/: __init__.py  arrays.py  basic.py  data.py  grammar_type.py  mixed.py  warnings.py
src/ase2sprkkr/common/test/: test_common.py  test_grammar_types.py
src/ase2sprkkr/examples/: README  __init__.py  clean.sh  torque.inp
src/ase2sprkkr/examples/A01_Fe_scf_simple/: Fe.py
src/ase2sprkkr/examples/A03_Fe_dos/: Fe.py
src/ase2sprkkr/examples/A04_CPA_Example/: Ni_doped_STO.py
src/ase2sprkkr/examples/A07_SrTiO3_MSSPEC/: STO.py
src/ase2sprkkr/examples/A09_EmptySpheres/: empty_speheres.py
src/ase2sprkkr/examples/A10_DLM/: bcc_Fe_dlm.py
src/ase2sprkkr/examples/A10_Torque/: Fe_TORQUE.inp  Fe_torque.out  test_torque.py  test_torque2.py  torque_calculation.out
src/ase2sprkkr/examples/A11_JXC/: Fe.pot_new  Fe_JXC.inp  Fe_JXC_XCPLTEN_Dij_y_Fe.agr  Fe_JXC_XCPLTEN_Dij_z_Fe.agr  Fe_jxc.out  SPRKKR4UppASD.py  jxc.py
src/ase2sprkkr/examples/A11_Torque/: test_torque.py  torque_calculation.out
src/ase2sprkkr/examples/A12_JXC/: jxc.py
src/ase2sprkkr/examples/A13_XAS/: xas.py
src/ase2sprkkr/examples/A1_Fe_scf_simple/: Fe.py
src/ase2sprkkr/examples/A2_Fe_scf_input_modifications/: Fe.py
src/ase2sprkkr/examples/A3_Fe_dos/: Fe.py
src/ase2sprkkr/examples/A5_Al_EOS/: Al.pot  Al.py
src/ase2sprkkr/examples/A6_Cu_MSSPEC/: Cu.py
src/ase2sprkkr/examples/A8_ARPES_and_plotting/: arpes.py
src/ase2sprkkr/examples/A9_EmpySpheres/: empty_speheres.py
src/ase2sprkkr/gui/: k_path.py  plot.py
src/ase2sprkkr/input_parameters/: __init__.py  input_parameters.py  input_parameters_definitions.py  task_result.py
src/ase2sprkkr/input_parameters/definitions/: __init__.py  arpes.py  bsf.py  bsfek.py  bsfkk.py  dos.py  gilbert.py  jxc.py  phagen.py  scf.py  sections.py  torque.py  xas.py
src/ase2sprkkr/input_parameters/examples/: bsf.inp  bsf_kake.inp  dos.in  jxc.in  xas.inp
src/ase2sprkkr/old/: misc.py
src/ase2sprkkr/output_files/: __init__.py  output_files.py  output_files_definitions.py
src/ase2sprkkr/outputs/: __init__.py  output_definitions.py  output_files_definitions.py  sprkkr_output_reader.py  task_result.py
src/ase2sprkkr/physics/: __init__.py  broadening.py  core_hole_width.py  lattice_data.py  winger_seitz_radii.py
src/ase2sprkkr/potential/: __init__.py  custom_potential_section.py  potential_definitions.py  potential_sections.py  potentials.py
src/ase2sprkkr/potentials/: custom_potential_section.py  io_data.py  potential_definitions.py  potential_sections.py  potentials.py
src/ase2sprkkr/sprkkr/: __init__.py  atomic_types.py  atoms_region.py  build.py  calculator.py  configuration.py  io_data.py  moments.py  occupations.py  radial.py  radial_meshes.py  reference_systems.py  sites.py  spacegroup_info.py  sprkkr_atoms.py  sprkkr_grammar_types.py  structure.py  sysfile.py
src/ase2sprkkr/task/: __init__.py  output_definitions.py  task_definitions.py  task_result.py  tasks.py
src/ase2sprkkr/tools/: __init__.py  a2s_plot_output.py  a2s_visualise_in_struct.py  ase2sprkkr  ase2sprkkr.py  shared.py  visualise_in_struct.py
src/ase2sprkkr/visualise/: plot.py
src/old/: calcio.py  calculator.py
src/old/data/: sprkkr_inputs.py
src/sprkkr/: __init__.py  calcio.py  calculator.py  misc.py  parse_output.py
src/sprkkr/ase/: atoms_io_data.py  sprkkr_atoms.py
src/sprkkr/common/: conf_containers.py  configuration_definitions.py  grammar.py  grammar_types.py  init_tests.py  misc.py  options.py  process_output_reader.py
src/sprkkr/data/: __init__.py  sprkkr_inputs.py  ws_radii.py
src/sprkkr/potential/: atom_sections.py  atoms_sections.py  custom_potential_section.py  io_data.py  lattice_section.py  potential.py  potential_definitions.py  potential_sections.py  potentials.py  sites_section.py
src/sprkkr/sprkkr/: atomic_types.py  calculator.py  occupations.py  radial_meshes.py  sites.py
src/sprkkr/sprkkr_io/: sprkkr_io_entries.py  sprkkr_io_entry_def.py  sprkkr_io_types.py
src/sprkkr/task/: custom_potential_section.py  sections.py  task_definitions.py  task_result.py  tasks.py
src/sprkkr/tools/: calc_rws.f90  visualise_in_struct.py
(+9515 files in other folders)
