[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython', 'numpy' ]

[project.scripts]
ase2sprkkr = "ase2sprkkr.tools.ase2sprkkr:run"

[project]
name = "ase2sprkkr"
version = "3.1.0b"
requires-python = ">= 3.7"
dependencies = [
  "ase",
  "asr",
  "spglib",
  "pyparsing",
  "mendeleev",
  "platformdirs",
  "packaging",
  "cython",
  "setuptools",
  "pint",
	"pytest",
  'importlib_metadata;python_version<"3.8"'
]
authors = [
  { name = "Maty치코 Nov치k", email = "novakmat@fzu.cz" },
  { name = "Jano Min치r" },
  { email = "ase2sprkkr@ntc.zcu.cz" }
]
readme = "README.md"

[project.urls]
Homepage = "https://ase2sprkkr.github.io/ase2sprkkr/"

[project.entry-points."ase.plugins"]
ase2sprkkr = "ase2sprkkr.ase.register"
