[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core",
    "cython",
		"numpy"
]
#build-backend = "setuptools.build_meta"

[project.scripts]
ase2sprkkr = "ase2sprkkr.tools.ase2sprkkr:run"

[project]
name = "ase2sprkkr"
version = "3.3.3"
requires-python = ">= 3.8"
dependencies = [
  "ase",
  "asr",
  "spglib",
  "pyparsing>=3.0",
  "mendeleev",
  "platformdirs",
  "packaging",
  "cython",
  "setuptools",
  "pint",
  "pytest",
  'pyyaml',
  'requests',
  'argcomplete',
  'numpy'
]
authors = [
  { name = "Maty치코 Nov치k", email = "novakmat@fzu.cz" },
  { name = "Jano Min치r" },
  { email = "ase2sprkkr@ntc.zcu.cz" }
]
readme = "README.md"
description = "Wrapper/calculator for SPRKKR to be used within ASE (Atomic Simulation Environment)"
license-files = ["LICENCE"]

[project.urls]
Homepage = "https://ase2sprkkr.github.io/ase2sprkkr/"

[project.entry-points."ase.plugins"]
ase2sprkkr = "ase2sprkkr.ase.register"

[tool.scikit-build]
logging.level = "DEBUG"
ninja.make-fallback = false
cmake.version = ">=3.15"
build.verbose = true

wheel.packages = ["src/ase2sprkkr"]
sdist.exclude = [
	"**/*",
	"**/*.sw?",
	"**/.pytest_cache",
	"**/.pytest_cache/**",
]
sdist.include = [
	"src/ase2sprkkr/input_parameters/examples/*.in",
	"src/ase2sprkkr/potentials/examples/*.pot",
	"src/ase2sprkkr/output_files/examples/*.bsf",
	"src/ase2sprkkr/output_files/examples/*.spc",
	"src/ase2sprkkr/output_files/examples/*.dos",
	"src/ase2sprkkr/outputs/examples/*.out",
	"src/ase2sprkkr/examples/README",

	"src/ase2sprkkr/sprkkr/test/*.cif",
	"src/ase2sprkkr/bindings/xband/tests/*.pot",
	"src/ase2sprkkr/run_tests",

	"src/ase2sprkkr/**/*.py",
	"src/ase2sprkkr/**/*.pyx",
	"src/ase2sprkkr/**/*.f",
	"src/ase2sprkkr/**/*.fi",
	"src/ase2sprkkr/**/*.h",
	"src/**/CMakeLists.txt",
	"/CMakeLists.txt",
	"/LICENCE",
	"/CHANGELOG",
  "/README.md",
	"docs/**",

	"pyproject.toml",
  "meta.yaml"
]
wheel.exclude = [
	"**/*.pyx",
	"**/*.h",
	"**/*.f",
	"**/*.fi",
	"CMakeLists.txt",
]
