[metadata]
name = ase2sprkkr
version = 0.0.1
author = Maty치코 Nov치k & Jano Min치r
author_email = novakmat@fzu.cz
description = ASE (atomic simulation environment) interface to SPRKKR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
	ase
	spglib
	pyparsing
	mendeleev

[options.packages.find]
where = src
