[metadata]
name = ase2sprkkr
version = 1.0.0
author = Maty치코 Nov치k & Jano Min치r
author_email = ase2kkr@ntc.zcu.cz
description = ASE (atomic simulation environment) interface to SPRKKR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
#project_urls =
#	Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.package_data]
* = src/**/*.in

[options]
package_dir =
    = src
packages = find:
scripts = src/ase2sprkkr/tools/a2s_visualise_in_struct.py
python_requires = >=3.7
install_requires =
	ase
	spglib
	pyparsing
	mendeleev

[options.packages.find]
where = src
